--- a/app/src/main/res/layout/activity_albums.xml
+++ b/app/src/main/res/layout/activity_albums.xml
@@ -9,7 +9,7 @@
     tools:openDrawer="start">
 
     <include
-        android:id="@+id/app_bar_albums2"
+        android:id="@+id/app_bar_albums"
         layout="@layout/app_bar_albums"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
