--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,15 +5,15 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_albums"
             android:icon="@drawable/ic_baseline_album_24"
             android:title="@string/menu_albums" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_artists"
             android:icon="@drawable/ic_baseline_people_24"
             android:title="@string/menu_artists" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_collectors"
             android:icon="@drawable/ic_baseline_collections_bookmark_24"
             android:title="@string/menu_collectors" />
     </group>
