--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_albums_menu">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.example.android.vinylsappg21.ui.home.HomeFragment"
+        android:id="@+id/nav_albums_menu"
+        android:name="com.example.android.vinylsappg21.ui.albums.AlbumsFragment"
         android:label="@string/menu_albums"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_albums" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.android.vinylsappg21.ui.gallery.GalleryFragment"
+        android:id="@+id/nav_artists_menu"
+        android:name="com.example.android.vinylsappg21.ui.artists.ArtistsFragment"
         android:label="@string/menu_artists"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_artists" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.android.vinylsappg21.ui.slideshow.SlideshowFragment"
+        android:id="@+id/nav_collectors_menu"
+        android:name="com.example.android.vinylsappg21.ui.collectors.CollectorsFragment"
         android:label="@string/menu_collectors"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_collectors" />
 </navigation>
