--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -31,12 +31,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@{album.name}" />
-                <TextView
-                    android:id="@+id/textView5"
+
+                <ImageView
+                    android:id="@+id/imageView9"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{album.description}" />
-
+                    tools:srcCompat="@tools:sample/avatars" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
