--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -29,16 +29,16 @@
                 android:id="@+id/albums_fragment_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:layout_weight="1"
                 android:text="@string/menu_albums"
                 android:textSize="30sp" />
-
+            <!--Este botón se debe ocultar en función del tipo de usuario-->
             <Button
                 android:id="@+id/fetch_button"
                 android:layout_width="@dimen/cardview_default_radius"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:layout_weight="1"
                 android:text="@string/btn_new_album" />
         </LinearLayout>
@@ -54,13 +54,14 @@
 
             <TextView
                 android:id="@+id/albums_fragment_desc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_gravity="start"
                 android:layout_weight="1"
                 android:text="@string/albums_fragment_desc"
                 android:textSize="20sp" />
         </LinearLayout>
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
