--- a/app/src/main/res/layout/fragment_artists.xml
+++ b/app/src/main/res/layout/fragment_artists.xml
@@ -6,18 +6,66 @@
     android:layout_height="match_parent"
     tools:context=".ui.artists.ArtistsFragment">
 
-    <TextView
-        android:id="@+id/text_gallery"
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:text="Artistas"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        tools:context=".AlbumsActivity"
+        tools:ignore="MissingConstraints">
+<!--        tools:context=".AlbumsActivity"-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            tools:context=".AlbumsActivity"
+            android:weightSum="2">
+            <!--        tools:context=".AlbumsActivity"-->
+            <TextView
+                android:id="@+id/artists_fragment_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:text="@string/title_artists"
+                android:textSize="30sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            tools:context=".AlbumsActivity"
+            android:weightSum="2">
+            <!--        tools:context=".AlbumsActivity"-->
+
+            <TextView
+                android:id="@+id/artists_fragment_desc"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:text="@string/artists_fragment_desc"
+                android:textSize="20sp" />
+        </LinearLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:context=".ui.AlbumFragment"
+            tools:layout_editor_absoluteX="16dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/artistsRv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:listitem="@layout/album_item" />
+        </FrameLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
