--- a/app/src/main/res/layout/fragment_artists.xml
+++ b/app/src/main/res/layout/fragment_artists.xml
@@ -50,9 +50,19 @@
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_gravity="start"
+                android:gravity="center_vertical"
                 android:layout_weight="1"
                 android:text="@string/artists_fragment_desc"
                 android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/searchTextArtista"
+                android:layout_width="29dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text"
+                android:hint="Buscar" />
         </LinearLayout>
         <FrameLayout
             android:layout_width="match_parent"
