--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -57,9 +57,18 @@
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_gravity="start"
+                android:gravity="center_vertical"
                 android:layout_weight="1"
                 android:text="@string/albums_fragment_desc"
                 android:textSize="20sp" />
+            <EditText
+                android:id="@+id/searchTextAlbums"
+                android:layout_width="29dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text"
+                android:hint="Buscar" />
         </LinearLayout>
 
         <FrameLayout
