Se diseña la plantilla y se conecta con backend

--- a/app/src/main/res/layout/fragment_collectors.xml
+++ b/app/src/main/res/layout/fragment_collectors.xml
@@ -39,14 +39,14 @@
         android:paddingLeft="10dp"
         android:text="Encuentra a los Coleccionistas"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 
-    <TableLayout
-        android:id="@+id/tableLayout2"
+    <androidx.recyclerview.widget.RecyclerView
+        android:paddingTop="60dp"
+        android:id="@+id/collectorsRv"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="45dp"
@@ -55,178 +55,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_slideshow">
-
-        <TableRow
-            android:gravity="center">
+        app:layout_constraintTop_toBottomOf="@+id/text_slideshow"
+        tools:listitem="@layout/collector_item" />
 
 
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="Coleccionista 1"
-                android:textSize="18sp" />
 
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="Coleccionista 2"
-                android:textSize="18sp" />
-        </TableRow>
-        <TableRow
-            android:layout_marginBottom="25dp"
-            android:gravity="center">
-
-
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="colec1@col.co"
-                android:textSize="15sp" />
-
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="colec2@col.co"
-                android:textSize="15sp" />
-        </TableRow>
-
-        <TableRow
-            android:gravity="center">
-
-            <TextView
-                android:layout_width="200dp"
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="Coleccionista 3"
-                android:textSize="18sp" />
-
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="Coleccionista 4"
-                android:textSize="18sp" />
-        </TableRow>
-        <TableRow
-            android:layout_marginBottom="25dp"
-            android:gravity="center">
-
-
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="colec3@col.co"
-                android:textSize="15sp" />
-
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="colec4@col.co"
-                android:textSize="15sp" />
-        </TableRow>
-
-        <TableRow
-            android:gravity="center">
-
-            <TextView
-                android:layout_width="200dp"
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="Coleccionista 5"
-                android:textSize="18sp" />
-
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="Coleccionista 6"
-                android:textSize="18sp" />
-        </TableRow>
-        <TableRow
-            android:layout_marginBottom="25dp"
-            android:gravity="center">
-
-
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="colec5@col.co"
-                android:textSize="15sp" />
-
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="colec6@col.co"
-                android:textSize="15sp" />
-        </TableRow>
-
-        <TableRow
-            android:gravity="center">
-
-            <TextView
-                android:layout_width="200dp"
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="Coleccionista 7"
-                android:textSize="18sp" />
-
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="Coleccionista 8"
-                android:textSize="18sp" />
-        </TableRow>
-        <TableRow
-            android:layout_marginBottom="25dp"
-            android:gravity="center">
-
-
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="colec7@col.co"
-                android:textSize="15sp" />
-
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="colec8@col.co"
-                android:textSize="15sp" />
-        </TableRow>
-        <TableRow
-            android:gravity="center">
-
-            <TextView
-                android:layout_width="200dp"
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="Coleccionista 9"
-                android:textSize="18sp" />
-
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="Coleccionista 10"
-                android:textSize="18sp" />
-        </TableRow>
-
-        <TableRow
-            android:layout_height="48dp"
-            android:layout_marginBottom="25dp"
-            android:gravity="center">
-
-
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="colec9@col.co"
-                android:textSize="15sp" />
-
-            <TextView
-                android:gravity="center"
-                android:padding="3dip"
-                android:text="colec10@col.co"
-                android:textSize="15sp" />
-        </TableRow>
-    </TableLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
