--- a/app/src/main/res/layout/activity_artist_detail.xml
+++ b/app/src/main/res/layout/activity_artist_detail.xml
@@ -1,73 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.artists.ArtistDetailActivity">
 
-    <data>
-        <variable name="artist" type="com.example.android.vinylsappg21.models.Artist"/>
-    </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.artists.ArtistDetailFragment">
+        android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            tools:context=".AlbumsActivity"
-            tools:ignore="MissingConstraints">
-            <!--        tools:context=".AlbumsActivity"-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                tools:context=".AlbumsActivity"
-                android:weightSum="2">
-                <!--        tools:context=".AlbumsActivity"-->
-                <TextView
-                    android:id="@+id/artists_fragment_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:layout_weight="1"
-                    android:text="@{artist.name}"
-                    android:textSize="30sp" />
-            </LinearLayout>
+            android:layout_height="@dimen/nav_header_height"
+            android:background="@drawable/backblue"
+            android:orientation="vertical">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/artists_fragment_name"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                tools:context=".AlbumsActivity"
-                android:weightSum="2">
-                <!--        tools:context=".AlbumsActivity"-->
+                android:layout_height="match_parent"
+                android:text="Nombre del artista"
+                android:textSize="48sp"
+                android:textColor="#FFFFFF"
+                android:textAlignment="center"
+                android:textStyle="normal"/>
 
-                <androidx.appcompat.widget.AppCompatImageView
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="300dp"
+                android:layout_height="150dp"
+                android:gravity="center_vertical"
+                android:layout_weight="1"
+                app:cardCornerRadius="100dp"
+                android:layout_margin="5dp"
+                android:elevation="10dp">
+
+                <ImageView
                     android:id="@+id/artist_detail_fragment_img"
-                    android:layout_width="300dp"
-                    android:layout_height="100dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:layout_gravity="start"
-                    android:gravity="center_vertical"
-                    android:layout_weight="1"
-                    app:imageURL="@{artist.image}"
-                    android:textSize="20sp" />
+                    android:background="@color/white"
+                    android:scaleType="centerCrop"
+                    />
+            </androidx.cardview.widget.CardView>
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                    <EditText
+                    <TextView
                         android:id="@+id/birthday_artist_desc"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
@@ -83,11 +80,10 @@
                         android:layout_height="40dp"
                         android:layout_gravity="start"
                         android:gravity="center_vertical"
-                        android:text="@{artist.birthday.toString()}"
                         android:background="@null"
                         android:textSize="15sp" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/details_artist_desc"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
@@ -97,17 +93,16 @@
                         android:background="@null"
                         android:textSize="15sp" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/details_artist"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="start"
                         android:gravity="center_vertical"
-                        android:text="@{artist.description}"
                         android:background="@null"
                         android:textSize="15sp" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/albums_artist_desc"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
@@ -117,21 +112,24 @@
                         android:background="@null"
                         android:textSize="15sp" />
 
-                    <EditText
+                    <ListView
                         android:id="@+id/albums_artist"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="start"
                         android:gravity="center_vertical"
-                        android:text="- Buscando América \n- Poeta del pueblo"
                         android:background="@null"
                         android:textSize="15sp" />
 
                 </LinearLayout>
 
+            </ScrollView>
 
-            </LinearLayout>
+
         </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
