--- a/app/src/main/res/layout/activity_artist_detail.xml
+++ b/app/src/main/res/layout/activity_artist_detail.xml
@@ -112,7 +112,7 @@
                         android:background="@null"
                         android:textSize="15sp" />
 
-                    <ListView
+                    <TextView
                         android:id="@+id/albums_artist"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
