--- a/app/src/main/res/layout/activity_artist_detail.xml
+++ b/app/src/main/res/layout/activity_artist_detail.xml
@@ -21,7 +21,6 @@
                 android:id="@+id/artists_fragment_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Nombre del artista"
                 android:textSize="48sp"
                 android:textColor="#FFFFFF"
                 android:textAlignment="center"
@@ -51,6 +50,7 @@
                     android:layout_gravity="start"
                     android:background="@color/white"
                     android:scaleType="centerCrop"
+                    android:contentDescription="imagen_artista"
                     />
             </androidx.cardview.widget.CardView>
 
@@ -61,7 +61,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
 
                     <TextView
@@ -72,7 +72,8 @@
                         android:gravity="center_vertical"
                         android:text="@string/birthday_artist_desc"
                         android:background="@null"
-                        android:textSize="15sp" />
+                        android:textSize="15sp"
+                        android:textStyle="bold"/>
 
                     <TextView
                         android:id="@+id/birthday_artist"
@@ -89,9 +90,10 @@
                         android:layout_height="40dp"
                         android:layout_gravity="start"
                         android:gravity="center_vertical"
-                        android:text="Descripción"
+                        android:text="@string/artist_detail_desc"
                         android:background="@null"
-                        android:textSize="15sp" />
+                        android:textSize="15sp"
+                        android:textStyle="bold"/>
 
                     <TextView
                         android:id="@+id/details_artist"
@@ -110,7 +112,8 @@
                         android:gravity="center_vertical"
                         android:text="@string/albums_artist_desc"
                         android:background="@null"
-                        android:textSize="15sp" />
+                        android:textSize="15sp"
+                        android:textStyle="bold"/>
 
                     <TextView
                         android:id="@+id/albums_artist"
