--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
                 android:layout_width="228dp"
                 android:layout_height="match_parent"
                 android:text="@string/app_name"
-                android:textSize="25dp" />
+                android:textSize="25sp" />
 
         </TableRow>
         <TableRow
@@ -43,7 +43,7 @@
                 android:gravity="center"
                 android:text="@string/body_landing"
                 android:textColor="#000000"
-                android:textSize="18dp" />
+                android:textSize="18sp" />
 
         </TableRow>
         <TableRow
@@ -88,7 +88,7 @@
                         android:gravity="center"
                         android:text="@string/visitor"
                         android:textColor="#000000"
-                        android:textSize="15dp" />
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/collector2"
@@ -97,7 +97,7 @@
                         android:gravity="center"
                         android:text="@string/collector"
                         android:textColor="#000000"
-                        android:textSize="15dp" />
+                        android:textSize="15sp" />
                 </TableRow>
 
             </TableLayout>
