--- a/app/src/main/res/layout/fragment_collectors.xml
+++ b/app/src/main/res/layout/fragment_collectors.xml
@@ -25,12 +25,12 @@
         <TextView
             android:id="@+id/albums_fragment_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_gravity="start"
             android:layout_weight="1"
             android:text="@string/menu_collectors"
             android:textSize="30sp" />
-        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:stretchColumns="1">
