--- a/app/src/main/res/layout/fragment_artists.xml
+++ b/app/src/main/res/layout/fragment_artists.xml
@@ -28,7 +28,7 @@
             <!--        tools:context=".AlbumsActivity"-->
             <TextView
                 android:id="@+id/artists_fragment_title"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_weight="1"
@@ -62,7 +62,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="text"
-                android:hint="Buscar" />
+                android:hint="@string/buscarString" />
         </LinearLayout>
         <FrameLayout
             android:layout_width="match_parent"
