--- a/app/src/main/res/layout/activity_album_detail.xml
+++ b/app/src/main/res/layout/activity_album_detail.xml
@@ -6,30 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".ui.albums.AlbumDetailActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/nav_header_height"
+            android:background="@drawable/backblue"
             android:orientation="vertical">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/tvAlbumName"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/nav_header_height"
-                android:layout_marginTop="-80sp"
-                android:background="@drawable/semicircle"
-                android:orientation="vertical">
+                android:layout_height="match_parent"
+                android:layout_marginTop="30sp"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="@string/hello_blank_fragment"
+                android:textColor="@color/white"
+                android:textSize="34sp"
+                tools:text="Nombre del álbum" />
 
-                <TextView
-                    android:id="@+id/tvAlbumName"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="30sp"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:text="@string/hello_blank_fragment"
-                    android:textColor="@color/white"
-                    android:textSize="34sp"
-                    tools:text="Nombre del álbum" />
-
-            </LinearLayout>
+        </LinearLayout>
 
             <ScrollView
                 android:layout_width="match_parent"
