--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_vinilos" />
+                android:src="@drawable/ic_vinilos"
+                android:contentDescription="@string/contDesc_appLogo"/>
         </TableRow>
         <TableRow android:gravity="center">
             <TextView
@@ -33,7 +34,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/white_space" />
+                android:src="@drawable/white_space"
+                android:contentDescription="@null"/>
         </TableRow>
         <TableRow android:gravity="center">
             <TextView
@@ -52,7 +54,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
-                android:src="@drawable/white_space" />
+                android:src="@drawable/white_space"
+                android:contentDescription="@null"/>
         </TableRow>
 
         <TableRow
@@ -70,13 +73,15 @@
                         android:id="@+id/visitor1"
                         android:layout_width="211dp"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_visitantes" />
+                        android:src="@drawable/ic_visitantes"
+                        android:contentDescription="@string/contDesc_visitorButton"/>
 
                     <ImageView
                         android:id="@+id/collector1"
                         android:layout_width="177dp"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_coleccionistas" />
+                        android:src="@drawable/ic_coleccionistas"
+                        android:contentDescription="@string/contDesc_collectorButton"/>
                 </TableRow>
 
                 <TableRow android:gravity="center">
