Versión final de creación de álbumes

--- a/app/src/main/res/layout/activity_create_album.xml
+++ b/app/src/main/res/layout/activity_create_album.xml
@@ -80,7 +80,7 @@
                         <TextView
                             android:id="@+id/tvNewAlbumReleaseDateLbl"
                             android:layout_width="fill_parent"
-                            android:layout_height="40sp"
+                            android:layout_height="0dp"
                             android:layout_weight="1"
                             android:gravity="center_horizontal|center_vertical"
                             android:text="@string/album_lbl_releaseDate"
@@ -95,9 +95,9 @@
                             android:layout_gravity="center_horizontal"
                             android:calendarViewShown="false"
                             android:clickable="true"
-                            android:focusable="true"
                             android:datePickerMode="spinner"
                             android:ems="10"
+                            android:focusable="true"
                             android:gravity="center_horizontal|center_vertical" />
 
                     </LinearLayout>
@@ -189,7 +189,7 @@
 
                     <Space
                         android:layout_width="match_parent"
-                        android:layout_height="40sp"
+                        android:layout_height="0dp"
                         android:layout_weight="0" />
 
                     <LinearLayout
