--- a/app/src/main/res/layout/fragment_artists.xml
+++ b/app/src/main/res/layout/fragment_artists.xml
@@ -69,8 +69,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="text"
-                android:hint="@string/buscarString"
-                android:importantForAutofill="no" />
+                android:hint="@string/buscarString" />
         </LinearLayout>
 
         <FrameLayout
